--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h2>Und noch eine Überschrift °o°</h2>
     <br>
     <br>
-    <a href="C:\Users\User\Documents\Website\test.html">Ein Link?</a>
+    <a href="/test.html">Ein Link?</a>
 </body>
 </html>
