--- a/index.html
+++ b/index.html
@@ -49,17 +49,14 @@
     Jan der Prophet
     <br>
     <br>
-    <h2></h2>
-    <br>
-    <br>
     <h2>Ein einblick in den Altag eines Mitglieds</h2>
     Um dir einen guten Überblick zu geben, was es heißt Mitglied unserer Sekte zu sein, baten wir eines unserer Mitglieder einen Tag in seinem Leben zu dokumentieren.<br>
     <br>
-    <a href="C:\Users\User\Documents\Website\Altag.html">Ein einblick in den Altag eines Mitglieds.</a>
+    <a href="/Altag.html">Ein einblick in den Altag eines Mitglieds.</a>
     <br>
     <br>
     <h2>Quiz</h2>
-    Falls du dir noch nicht sicher bist ob unsere Sekte das richtige für dich ist, haben wir ein <a href="C:\Users\User\Documents\Website\Error.html">Quiz</a> erstellt mit dem du<br>
+    Falls du dir noch nicht sicher bist ob unsere Sekte das richtige für dich ist, haben wir ein <a href="/Error.html">Quiz</a> erstellt mit dem du<br>
     dich testen kannst.
     <br>
     <br>
