--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     Jan der Prophet
     <br>
     <br>
-    <h2>Ein einblick in den Altag eines Mitglieds</h2>
+    <h2>Ein Einblick in den Altag eines Mitglieds</h2>
     Um dir einen guten Überblick zu geben, was es heißt Mitglied unserer Sekte zu sein, baten wir eines unserer Mitglieder einen Tag in seinem Leben zu dokumentieren.<br>
     <br>
-    <a href="/Altag.html">Ein einblick in den Altag eines Mitglieds.</a>
+    <a href="/Altag.html">Ein Einblick in den Altag eines Mitglieds.</a>
     <br>
     <br>
     <h2>Quiz</h2>
@@ -73,8 +73,6 @@
     Umhänge sind was für Superhelden. Ich bin was besseres!
     <h3>Wie genau wurde euer Oberhaupt auserwählt? War es eine göttliche Vision oder hatte er einfach das lauteste Megafon?</h3>
     Nein! Die beste Website ;)
-    <h3>Darf man zwischendurch zweifeln oder gibt’s dafür eine Strafarbeit?</h3>
-    Nein! Man wird sofort umgebracht.
     <h3>Wird der große Prophet mit Gold bezahlt oder akzeptiert er auch kontaktloses Bezahlen?</h3>
     Nur bares ist wahres. Wie soll ich sonst drin Baden?
     <br>
