--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     Jan der Prophet
     <br>
     <br>
-    <h2>Ein Einblick in den Altag eines Mitglieds</h2>
+    <h2>Ein Einblick in den Alltag eines Mitglieds</h2>
     Um dir einen guten Überblick zu geben, was es heißt Mitglied unserer Sekte zu sein, baten wir eines unserer Mitglieder einen Tag in seinem Leben zu dokumentieren.<br>
     <br>
-    <a href="/Altag.html">Ein Einblick in den Altag eines Mitglieds.</a>
+    <a href="/Altag.html">Ein Einblick in den Alltag eines Mitglieds.</a>
     <br>
     <br>
     <h2>Quiz</h2>
