--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </style> 
 </head>
 <header>
-    <h1>Wilkommen</h1>
+    <h1>Willkommen</h1>
     Wir sind eine kleine Sekte die <b>weiß</b>, dass alles scheiße ist.<br>
     Wir wollen unser Wissen weiter geben und freuen uns deshalb immer über neue Mitglieder.<br>
     Solltest du interessiert sein, darfst du dir gerne alles durchlesen und wenn nicht, solltest du das trotzdem tun.<br>
